styles: Fix `transform` value on center aligned menu item
`translate` expects comma separated values:
https://developer.mozilla.org/en-US/docs/Web/CSS/transform-function/translate()

--- a/packages/codex/src/themes/mixins/menu-icon.less
+++ b/packages/codex/src/themes/mixins/menu-icon.less
@@ -31,5 +31,5 @@
 .cdx-mixin-menu-icon( @align, @size ) when ( @align = center ) {
 	right: 8px;
 	left: 8px;
-	transform: translate( 50% -50% );
+	transform: translate( 50%, -50% );
 };
